Added a unit test for the Yubikey provider